*likwid-3.1.3 (06 Nov 2014)

  06 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +likwid-3.1.3.ebuild, -likwid-3.0.0.ebuild:
  sys-apps/likwid: version bump

  10 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  likwid-3.0.0.ebuild:
  sys-apps/likwid: honor LDFLAGS & set SONAMEs

  09 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  likwid-3.0.0.ebuild, metadata.xml:
  sys-apps/likwid: added suid option

*likwid-3.0.0 (05 Dec 2013)

  05 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +likwid-3.0.0.ebuild, +metadata.xml:
  sys-apps/likwid: new ebuild