@@ -1,3 +1,7 @@
+  06 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  likwid-3.1.3.ebuild:
+  sys-apps/likwid: fix c std
+
 *likwid-3.1.3 (06 Nov 2014)
 
   06 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
